# fastapi_enterprise_template

./: .env  README.md  auth.py  guide.txt  logs.db  mypy.ini  pre-commit-config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1342be821846_initial_schema.py  ea78fc4ebb34_add_full_name_email_to_users.py
docs/: STRUCTURE.md
infra/: gunicorn_conf.py
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infra/docker/: Dockerfile.web  Dockerfile.worker
infra/k8s/api/: deployment.yaml
monitoring/: docker-compose.yml
monitoring/logging/: logging.yaml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
src/app/: main.py
src/app/api/v1/routers/: admin_dashboard.py  auth.py  users.py
src/app/auth/: dependencies.py  jwt_context_middleware.py  ldap_client.py  token.py
src/app/core/: config.py  logging_config.py  metrics_guard.py  observability.py  rate_limit.py  rbac.py  request_context.py
src/app/domain/entities/: user.py
src/app/domain/repositories/: user.py
src/app/domain/services/: auth_service.py  user_service.py
src/app/infrastructure/cache/: redis_client.py
src/app/infrastructure/db/: base.py  connections.py  dependencies.py  init_db.py
src/app/infrastructure/db/models/: __init__.py  role.py  user.py  user_roles.py
src/app/infrastructure/mq/: celery_app.py
src/app/schemas/: auth.py  role.py  user.py
src/app/security/: jwt.py
src/app/utils/: hp_py_logger.py  paths.py  request_context_middleware.py
tests/: test_logs.db  test_main.db
tests/unit/: test_health.py  test_ldap.py
(+1 files in other folders)
